<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.InviteActivity">

    <RelativeLayout
        android:id="@+id/lnrHeadings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <com.eziride.user.Utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/invite_referral"
            android:textColor="@color/text_red"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line_devider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/refer_your_friends_to_drive"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black_text_light"
            android:textSize="22sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/give_the_free_ride_by_reffering_the_invite_code_worth_"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/share_your_invite_code"
            android:textColor="@color/black_text_light"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:id="@+id/referral_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_border"
            android:drawableEnd="@drawable/ic_phone_book"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/invite_referral"
            android:padding="16dp"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/refferal_earning"
                android:textColor="@color/text_red"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/referral_earning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text=" - "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_members"
                android:textColor="@color/text_red"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/total_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text=" - "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/next_btn_selector"
        android:text="@string/invite_friends"
        android:textColor="#FFF" />

</LinearLayout>