<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llbottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:src="@drawable/back_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/line_devider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/email_layout"
                android:background="@android:color/darker_gray"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/enter_your_mail_id"
                    android:textColor="@color/black_text_light"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/otp_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="locale"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/secrete_code"
                        android:inputType="numberPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_password_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textWebPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_password_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/note"
                android:textColor="@color/black_text_color"
                android:visibility="visible" />

            <com.eziride.user.Utils.MyButton
                android:id="@+id/nextIcon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@drawable/next_btn_selector"
                android:gravity="center"
                android:src="@drawable/next_icon"
                android:text="@string/proceed"
                android:textColor="@color/text_color_white" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>