<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

    </RelativeLayout>

    <View
        android:id="@+id/line_devider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/email_layout"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/lnrBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_devider"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/mail" />

        <com.eziride.user.Utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/whats_your_mail_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrBegin"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">


        <com.eziride.user.Utils.MyEditText
            android:id="@+id/enter_ur_mailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:background="@drawable/edittext_bg"
            android:gravity="start"
            android:hint="@string/sample_mail_id"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="viewStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/enter_ur_mailID"
            android:layout_marginStart="@dimen/_35sdp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <com.eziride.user.Utils.MyButton
            android:id="@+id/nextICON"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/next_btn_selector"
            android:text="@string/next_"
            android:textColor="@color/text_color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/email_layout"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.eziride.user.Utils.MyTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/i_need_to_create_an_account"
                android:textColor="@color/text_red"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.eziride.user.Utils.MyTextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/i_forgot_my_password"
                android:textColor="@color/com_facebook_blue"
                android:textSize="14sp"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>